--- a/app/src/main/res/drawable/shape_profile_gradient_bg.xml
+++ b/app/src/main/res/drawable/shape_profile_gradient_bg.xml
@@ -4,14 +4,14 @@
     >
     <stroke
         android:color="@color/profile_photo_stroke"
-        android:width="1dp"
+        android:width="2dp"
         />
     <corners
-        android:radius="3dp"
+        android:radius="0dp"
         />
     <gradient
         android:angle="90"
-        android:startColor="#D5D5D5"
-        android:endColor="#F4F4F4"
+        android:endColor="#DFDBDB"
+        android:startColor="#C1C7CF"
         android:type="linear"/>
 </shape>
