--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -13,9 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/base_IMG_background"
-        android:scaleType="centerCrop"
-        android:alpha="0.35"
         android:contentDescription="@string/background"
+        style="@style/BackgroundImageView"
         />
 
     <TextView
