--- a/app/src/main/res/layout/activity_photo_inspect.xml
+++ b/app/src/main/res/layout/activity_photo_inspect.xml
@@ -7,6 +7,11 @@
     android:background="@android:color/black"
     tools:context=".activity.PhotoInspectActivity">
 
+    <ImageView
+        style="@style/BackgroundImageView"
+        android:id="@+id/base_IMG_background"
+        android:contentDescription="@string/background"
+        />
 
     <WebView
         android:layout_width="match_parent"
