--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -15,6 +15,17 @@
         app:layout_constraintHeight_percent="0.92"
         >
 
+        <ImageView
+            style="@style/BackgroundImageView"
+            android:id="@+id/base_IMG_background"
+            android:contentDescription="@string/background"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+
         <SearchView
             android:layout_width="match_parent"
             android:layout_height="0dp"
