--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -3,10 +3,9 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-  <group android:scaleX="0.24020489"
-      android:scaleY="0.24020489"
-      android:translateX="29.018692"
-      android:translateY="28.787384">
+  <group android:scaleX="0.5"
+      android:scaleY="0.5"
+      >
     <group>
       <clip-path
           android:pathData="M0,0L207.194,0L207.194,207.111L0,207.111L0,0Z"/>
