--- a/app/src/main/res/layout/recycler_event_item.xml
+++ b/app/src/main/res/layout/recycler_event_item.xml
@@ -119,17 +119,26 @@
                     android:layout_weight="0.3"
                     >
 
-                    <ImageView
+                    <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         app:layout_constraintDimensionRatio="1:1"
+                        app:cardCornerRadius="8dp"
                         app:layout_constraintTop_toTopOf="parent"
-                        android:id="@+id/event_item_IMG_image"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/ic_baseline_add_24"
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:layout_margin="10dp"
+                        >
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/event_item_IMG_image"
+                        app:tint="#BEFFFFFF"
+                        android:tintMode="multiply"
+                        android:scaleType="centerCrop"
                         />
+
+                    </androidx.cardview.widget.CardView>
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
