--- a/app/src/main/res/layout/recycler_registrable_event_item.xml
+++ b/app/src/main/res/layout/recycler_registrable_event_item.xml
@@ -125,19 +125,34 @@
                     android:id="@+id/event_item_LAY_image_and_button"
                     >
 
-                    <ImageView
+                    <androidx.cardview.widget.CardView
                         android:layout_width="90dp"
                         android:layout_margin="5dp"
                         android:layout_height="0dp"
-                        android:contentDescription="@string/sails"
                         app:layout_constraintDimensionRatio="1:1"
+                        app:cardCornerRadius="8dp"
+                        app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:id="@+id/event_item_IMG_image"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/ic_baseline_add_24"
-                        />
+                        android:id="@+id/event_item_LAY_image_layout"
+                        >
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:contentDescription="@string/sails"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            android:id="@+id/event_item_IMG_image"
+                            android:scaleType="centerCrop"
+                            app:tint="#BEFFFFFF"
+                            android:tintMode="multiply"
+                            />
+
+                    </androidx.cardview.widget.CardView>
+
+
 
                     <com.google.android.material.button.MaterialButton
                         android:layout_width="wrap_content"
@@ -145,7 +160,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        app:layout_constraintTop_toBottomOf="@id/event_item_IMG_image"
+                        app:layout_constraintTop_toBottomOf="@id/event_item_LAY_image_layout"
                         app:icon="@drawable/ic_points_wheel"
                         app:iconSize="23dp"
                         app:iconGravity="start"
@@ -163,11 +178,7 @@
                         app:iconTintMode="multiply"
                         app:iconTint="@android:color/white"
                         android:text="@string/number_00"
-
                         />
-
-
-
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -175,17 +186,17 @@
 
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/event_item_LAY_outer_info"
-                android:id="@+id/event_item_LAY_more_info"
-                android:visibility="gone"
-                android:orientation="vertical"
-                android:animateLayoutChanges="true"
-                android:paddingBottom="16dp"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                >
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/event_item_LAY_outer_info"
+            android:id="@+id/event_item_LAY_more_info"
+            android:visibility="gone"
+            android:orientation="vertical"
+            android:animateLayoutChanges="true"
+            android:paddingBottom="16dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            >
 
                 <TextView
                     android:layout_width="match_parent"
