--- a/app/src/main/res/layout/fragment_loading.xml
+++ b/app/src/main/res/layout/fragment_loading.xml
@@ -49,10 +49,12 @@
         app:layout_constraintTop_toBottomOf="@id/loading_IMG_spinner"
         android:text="@string/loading"
         android:gravity="center"
-        android:autoSizeMinTextSize="8sp"
-        android:autoSizeMaxTextSize="50sp"
+        android:autoSizeMinTextSize="10sp"
+        android:autoSizeMaxTextSize="48sp"
         android:autoSizeTextType="uniform"
-        android:padding="5dp"
+        android:padding="8dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:id="@+id/loading_LBL_text"
         android:textColor="@android:color/white"
         android:alpha="0.9"
