--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -36,7 +36,8 @@
             android:text="@string/app_name"
             android:layout_gravity="center_horizontal"
             android:autoSizeMinTextSize="28dp"
-            android:autoSizeMaxTextSize="44dp"
+            android:autoSizeMaxTextSize="36dp"
+            android:padding="12dp"
             android:autoSizeTextType="uniform"
             android:gravity="center"
             android:textStyle="italic|bold"
