--- a/app/src/main/res/layout/fragment_next_event_card.xml
+++ b/app/src/main/res/layout/fragment_next_event_card.xml
@@ -32,7 +32,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:cardCornerRadius="18dp"
-            app:cardElevation="0dp"
+            app:cardElevation="4dp"
+            app:cardPreventCornerOverlap="false"
+            android:clipToPadding="false"
+            android:clipChildren="false"
+            android:layout_margin="10dp"
             >
 
             <View
