--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -14,7 +14,6 @@
         android:layout_height="0dp"
         app:layout_constraintHeight_percent="0.92"
         >
-
         <ImageView
             style="@style/BackgroundImageView"
             android:id="@+id/base_IMG_background"
@@ -25,13 +24,28 @@
             app:layout_constraintEnd_toEndOf="parent"
             />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHeight_percent="0.15"
+            android:text="@string/search_title"
+            android:gravity="center"
+            android:autoSizeMaxTextSize="32sp"
+            android:autoSizeMinTextSize="14sp"
+            android:autoSizeTextType="uniform"
+            android:id="@+id/search_LBL_title"
+            />
+
+
 
         <SearchView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_margin="20dp"
-            app:layout_constraintHeight_percent="0.1"
+            app:layout_constraintTop_toBottomOf="@id/search_LBL_title"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintHeight_percent="0.08"
             android:queryHint="@string/example_phone"
             android:id="@+id/search_SEARCH_searchbar"
             android:inputType="phone"
@@ -53,16 +67,19 @@
             />
 
         <fragment
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintHeight_percent="0.15"
+            app:layout_constraintWidth_percent="0.5"
+            app:layout_constraintHeight_percent="0.125"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:name="com.idan_koren_israeli.sailtracker.fragment.ProfileFragment"
             app:layout_constraintTop_toBottomOf="@id/search_SEARCH_searchbar"
             tools:layout="@layout/fragment_profile_card"
             app:show_points_status="false"
             app:show_history_button="false"
             android:id="@+id/search_FRAG_profile"
-            android:layout_marginTop="20dp"
+            android:layout_margin="20dp"
             />
 
 
@@ -70,6 +87,7 @@
         <fragment
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginTop="15dp"
             app:layout_constraintTop_toBottomOf="@id/search_FRAG_profile"
             app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/search_FRAG_collection"
