Refresh UI to remove deleted event card on CalendarActivity

--- a/app/src/main/res/layout/recycler_registrable_event_item.xml
+++ b/app/src/main/res/layout/recycler_registrable_event_item.xml
@@ -31,7 +31,7 @@
                 android:layout_marginStart="15dp"
                 android:background="@drawable/ic_delete"
                 android:id="@+id/register_event_item_BTN_delete"
-                app:backgroundTint="@android:color/black"
+                app:backgroundTint="@android:color/darker_gray"
                 />
 
 
