--- a/app/src/main/res/layout/fragment_profile_card.xml
+++ b/app/src/main/res/layout/fragment_profile_card.xml
@@ -116,10 +116,11 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:id="@+id/profile_BTN_history"
-            android:autoSizeMaxTextSize="22sp"
+            android:autoSizeMaxTextSize="14sp"
+            android:autoSizeMinTextSize="10dp"
             android:autoSizeTextType="uniform"
             android:text="@string/profile_events_history"
-            android:padding="3dp"
+            android:padding="5dp"
             android:lines="1"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
