Prevent redundant notification for unwatched event

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,5 +40,6 @@
     <color name="light_grey">#cccccc</color>
 
     <color name="profile_photo_stroke">#1E01579B</color>
+    <color name="event_card_watch_bg">#D8CAED</color>
 
 </resources>
